--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <span class="label-text">Pin</span>
                       </label>
                       <input
-                        type="password"
+                        type="password" id="pin-number"
                         placeholder="Your pin"
                         class="input input-bordered" autocomplete="off"
                         required
