payoo mobile bank

--- a/home-page.html
+++ b/home-page.html
@@ -20,7 +20,7 @@
           <div class="artboard artboard-demo phone-3">
             <div class="stats shadow">
               <div class="stat">
-                <div class="stat-value">45,400</div>
+                <div id="total-balance" class="stat-value">4400</div>
                 <div class="stat-desc text-center">Available Balance</div>
               </div>
             </div>
